--- a/assets/img/favicons/manifest.json
+++ b/assets/img/favicons/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Dr. Q Plastic Surgery",
+    "name": "United Surgical Associates",
     "icons": [
         {
             "src": "/android-chrome-192x192.png",
